--- a/WishList/Views/Home/Index.cshtml
+++ b/WishList/Views/Home/Index.cshtml
@@ -1,13 +1,2 @@
-﻿<!DOCTYPE html>
-<html>
-    <head>
-        <title>WishList</title>
+﻿<h1>Welcome, User</h1>
 
-        <!-- Handles styling the page to be more aesthetically pleasing -->
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css" />
-    </head>
-
-    <body>
-        <h1>Welcome, User</h1>
-    </body>
-</html>
