--- a/WishList/Views/Shared/Error.cshtml
+++ b/WishList/Views/Shared/Error.cshtml
@@ -1,13 +1,1 @@
-﻿<!DOCTYPE html>
-<html>
-    <head>
-        <title>WishList</title>
-
-        <!-- Handles styling the page to be more aesthetically pleasing -->
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css" />
-    </head>
-
-    <body>
-        <p>An error has occured. Please try again</p>
-    </body>
-</html>
+﻿<p>An error has occured. Please try again</p>
